--- a/flybywire-aircraft-a320-neo/html_ui/Pages/VLivery/Liveries/PostIT/PostIT.html
+++ b/flybywire-aircraft-a320-neo/html_ui/Pages/VLivery/Liveries/PostIT/PostIT.html
@@ -2,4 +2,5 @@
 <script type="text/html" id="postit">
     <div id="postit"></div>
 </script>
+<script type="text/html" import-script="/Pages/A32NX_Utils/NXDataStore.js"></script>
 <script type="text/html" import-script="/Pages/VLivery/Liveries/PostIT/PostIT.js"></script>
