--- a/fbw-a32nx/src/systems/instruments/src/PFD/proto.html
+++ b/fbw-a32nx/src/systems/instruments/src/PFD/proto.html
@@ -1,6 +1,6 @@
 ﻿<html>
   <head>
-    <link rel="stylesheet" href="./style.scss">
+    <link rel="stylesheet" href="MFD-common/common.scss">
   </head>
   <body>
     <div class="mfd-main">
