--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/EICAS/A320_Neo_EICAS.html
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/EICAS/A320_Neo_EICAS.html
@@ -1,4 +1,8 @@
-﻿<link rel="stylesheet" href="A320_Neo_EICAS.css" xmlns=""/>
+﻿<!-- //Copyright (c) 2021-2023 FlyByWire Simulations -->
+<!-- // -->
+<!-- //SPDX-License-Identifier: GPL-3.0 -->
+
+<link rel="stylesheet" href="A320_Neo_EICAS.css" xmlns=""/>
 <link rel="stylesheet" href="/CSS/A32NX_Display_Common.css"/>
 
 <script type="text/html" id="A320_Neo_EICAS">
@@ -69,7 +73,6 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Approach.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/FlightElements/A32NX_WaypointLoader.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/GeoCalc.js"></script>
-<script type="text/html" import-script="/JS/fbw-a32nx/fmgc/LzUtf8.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/fmgc/fmgc.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/sentry-client/sentry-client.js"></script>
 
