--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/CDU/A320_Neo_CDU.html
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/CDU/A320_Neo_CDU.html
@@ -1,3 +1,7 @@
+<!-- //Copyright (c) 2021-2023 FlyByWire Simulations -->
+<!-- // -->
+<!-- //SPDX-License-Identifier: GPL-3.0 -->
+
 <link rel="stylesheet" href="A320_Neo_CDU.css"/>
 
 <script type="text/html" id="A320_Neo_CDU">
@@ -31,7 +35,6 @@
 <script type="text/html" import-script="/JS/fbw-a32nx/atsu/fmsclient.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/sentry-client/sentry-client.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/simbridge-client/simbridge-client.js"></script>
-<script type="text/html" import-script="/JS/fbw-a32nx/fmgc/LzUtf8.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/fmgc/fmgc.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/A32NX_Simvars.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
