--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/FCU/A320_Neo_FCU.html
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/FCU/A320_Neo_FCU.html
@@ -99,6 +99,7 @@
 <script type="text/html" import-script="/JS/fbw-a32nx/A32NX_Util.js" import-async="false"></script>
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
+<script type="text/html" import-script="/JS/dataStorage.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
 
@@ -109,7 +110,6 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Approach.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/FlightElements/A32NX_Runway.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/GeoCalc.js"></script>
-<script type="text/html" import-script="/JS/fbw-a32nx/fmgc/LzUtf8.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/fmgc/fmgc.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/A32NX_Simvars.js"></script>
 <script type="text/html" import-script="/JS/fbw-a32nx/sentry-client/sentry-client.js"></script>
