fix(a380x FCU): - include lower case "t" and "d" in font for STD QNH display - include two spaces in FCU font: ~ being as wide as + or -; {sp} being as wide as numbers - remove managed dot (not present in a380) - hide degree sign when HDG/TRK managed - smaller bugfixes

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
@@ -10,11 +10,10 @@
             <div id="LargeScreen">
                 <div id="Speed">
                     <svg width="100%" height="100%">
-                        <text id="MACH" class="Common Inactive" x="0%" y="30%">MACH</text>
+                        <text id="MACH" class="Common Inactive" x="0%" y="20%">MACH</text>
                         <text id="SPD" class="Common Active" x="44%" y="20%">SPD</text>
                         <text id="Value" class="Common Value" x="6%" y="86%">---</text>
-                        <circle id="Illuminator" r="7%" cx="73%" cy="62%" />
-                        <text id="KNOTS" class="Common Active" x="79%" y="97%">KT</text>
+                        <text id="KNOTS" class="Common Inactive" x="79%" y="97%">KT</text>
                     </svg>
                 </div>
 
@@ -24,8 +23,7 @@
                         <text id="TRK" class="Common Inactive" x="47%" y="20%">TRK</text>
                         <text id="LAT" class="Common Inactive" x="64%" y="20%">LAT</text>
                         <text id="Value" class="Common Value" x="11%" y="86%">---</text>
-                        <circle id="Illuminator" r="7%" cx="73%" cy="62%" />
-                        <text id="DEGREES" class="Common Active" x="80%" y="62%">&#176;</text>
+                        <text id="DEGREES" class="Common Value" x="86%" y="86%">&#176;</text>
                     </svg>
                 </div>
 
