--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
@@ -10,11 +10,10 @@
             <div id="LargeScreen">
                 <div id="Speed">
                     <svg width="100%" height="100%">
-                        <text id="MACH" class="Common Inactive" x="0%" y="30%">MACH</text>
+                        <text id="MACH" class="Common Inactive" x="0%" y="20%">MACH</text>
                         <text id="SPD" class="Common Active" x="44%" y="20%">SPD</text>
                         <text id="Value" class="Common Value" x="6%" y="86%">---</text>
-                        <circle id="Illuminator" r="7%" cx="73%" cy="62%" />
-                        <text id="KNOTS" class="Common Active" x="79%" y="97%">KT</text>
+                        <text id="KNOTS" class="Common Inactive" x="79%" y="97%">KT</text>
                     </svg>
                 </div>
 
@@ -24,8 +23,7 @@
                         <text id="TRK" class="Common Inactive" x="47%" y="20%">TRK</text>
                         <text id="LAT" class="Common Inactive" x="64%" y="20%">LAT</text>
                         <text id="Value" class="Common Value" x="11%" y="86%">---</text>
-                        <circle id="Illuminator" r="7%" cx="73%" cy="62%" />
-                        <text id="DEGREES" class="Common Active" x="80%" y="62%">&#176;</text>
+                        <text id="DEGREES" class="Common Value" x="86%" y="86%">&#176;</text>
                     </svg>
                 </div>
 
@@ -57,7 +55,7 @@
                 </div>
                 <div id="Standard">
                     <svg width="100%" height="100%">
-                        <text class="Common Value BaroValue" x="4%" y="95%">Std</text>
+                        <text class="Common Value BaroValue" x="4%" y="86%">Std</text>
                     </svg>
                 </div>
             </div>
@@ -72,7 +70,7 @@
             <img style="position: absolute; top: 2300px; left: 1130px" width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/WX.png" />
             <img style="position: absolute; top: 2300px; left: 2080px" width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/TERR.png" />
             <img style="position: absolute; top: 2300px; left: 3030px" width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/TRAF.png" />
-            <img style="position: absolute; top: 2300px; left: 3980px   " width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/POINTER2.png" />
+            <img style="position: absolute; top: 2300px; left: 3980px" width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/POINTER2.png" />
         </div>
     </div>
 </script>
