copy EFIS buttons over to FO side

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
@@ -71,6 +71,28 @@
             <img style="position: absolute; top: 2300px; left: 2080px" width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/TERR.png" />
             <img style="position: absolute; top: 2300px; left: 3030px" width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/TRAF.png" />
             <img style="position: absolute; top: 2300px; left: 3980px" width="620px" src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/POINTER2.png" />
+
+            <img style="position: absolute; top: 2900px; left: 300px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/CSTR.png" />
+            <img style="position: absolute; top: 2900px; left: 1190px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/WPT.png" />
+            <img style="position: absolute; top: 2900px; left: 2140px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/VORD.png" />
+            <img style="position: absolute; top: 2900px; left: 3090px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/NDB.png" />
+            <img style="position: absolute; top: 2900px; left: 4040px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/ARPT.png" />
+
+            <img style="position: absolute; top: 3450px; left: 300px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/POINTER1.png" />
+            <img style="position: absolute; top: 3450px; left: 1190px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/WX.png" />
+            <img style="position: absolute; top: 3450px; left: 2140px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/TERR.png" />
+            <img style="position: absolute; top: 3450px; left: 3090px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/TRAF.png" />
+            <img style="position: absolute; top: 3450px; left: 4040px" width="620px"
+                src="/Pages/VCockpit/Instruments/LegacyA380X/FCU/Images/POINTER2.png" />
         </div>
     </div>
 </script>
