--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
@@ -55,6 +55,7 @@
                 </div>
                 <div id="Standard">
                     <svg width="100%" height="100%">
+                        <text id="PreSelBaroValue" class="Common Active BaroValue" x="100%" y="26%" text-anchor="end">1013</text>
                         <text class="Common Value BaroValue" x="4%" y="86%">Std</text>
                     </svg>
                 </div>
