--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.html
@@ -11,7 +11,7 @@
                 <div id="Speed">
                     <svg width="100%" height="100%">
                         <text id="MACH" class="Common Inactive" x="0%" y="20%">MACH</text>
-                        <text id="SPD" class="Common Active" x="44%" y="20%">SPD</text>
+                        <text id="SPD" class="Common Active" x="47%" y="20%">SPD</text>
                         <text id="Value" class="Common Value" x="6%" y="86%">---</text>
                         <text id="KNOTS" class="Common Inactive" x="79%" y="97%">KT</text>
                     </svg>
@@ -21,7 +21,6 @@
                     <svg width="100%" height="100%">
                         <text id="HDG" class="Common Active" x="13%" y="20%">HDG</text>
                         <text id="TRK" class="Common Inactive" x="47%" y="20%">TRK</text>
-                        <text id="LAT" class="Common Inactive" x="64%" y="20%">LAT</text>
                         <text id="Value" class="Common Value" x="11%" y="86%">---</text>
                         <text id="DEGREES" class="Common Value" x="86%" y="86%">&#176;</text>
                     </svg>
@@ -49,7 +48,7 @@
                 <div id="Selected">
                     <svg width="100%" height="100%">
                         <text id="QNH" class="Common Active BaroValue" x="5%" y="26%">QNH</text>
-                        <text id="QFE" class="Common Inactive BaroValue" x="84%" y="26%" text-anchor="end">QFE</text>
+                        <text id="QFE" class="Common Inactive BaroValue" x="40%" y="26%">QFE</text>
                         <text id="Value" class="Common Value BaroValue" x="4%" y="86%">00.00</text>
                     </svg>
                 </div>
